[gd_scene format=3 uid="uid://bxkku2t01vqb"]

[ext_resource type="Script" uid="uid://cwdm2mvoc7jl1" path="res://scenes/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bma8wsy6t2ey5" path="res://scenes/player.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://d1n18f7d7hqr2" path="res://scenes/coin.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://406iyw4t4q3x" path="res://scenes/hazard.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://e4ly1hnyqpjt" path="res://scenes/goal.tscn" id="5_tbgi4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(1311, 40)

[node name="Main" type="Node2D" unique_id=77717777]
script = ExtResource("1_o5qli")

[node name="Ground" type="StaticBody2D" parent="." unique_id=1432951872]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground" unique_id=470674790]
position = Vector2(-73.5, 163)
shape = SubResource("RectangleShape2D_sugp2")

[node name="Polygon2D" type="Polygon2D" parent="Ground" unique_id=252043894]
position = Vector2(-252.00002, 165)
scale = Vector2(1.595, 1)
color = Color(0.74587727, 0.61068213, 0.18152583, 1)
polygon = PackedVector2Array(-300, -20, 300, -20, 522.88403, -20, 522.2571, 19, 300, 20, -300, 20)

[node name="Player" parent="." unique_id=690117528 instance=ExtResource("2_0wfyh")]
position = Vector2(180, 114)
collision_mask = 6

[node name="Coin" parent="." unique_id=413837549 instance=ExtResource("3_sugp2")]
position = Vector2(98, 58)

[node name="Coin2" parent="." unique_id=1809711203 instance=ExtResource("3_sugp2")]
position = Vector2(285, 53)

[node name="ScoreLabel" type="Label" parent="." unique_id=1272695749]
offset_left = 17.0
offset_top = 17.0
offset_right = 107.0
offset_bottom = 40.0
text = "Collected: 0"

[node name="RestartLabel" type="Label" parent="." unique_id=1761868759]
offset_left = 18.0
offset_top = 46.0
offset_right = 106.0
offset_bottom = 69.0
text = "R to restart"

[node name="PauseLabel" type="Label" parent="." unique_id=18067198]
visible = false
offset_left = 375.0
offset_top = 1.0
offset_right = 437.0
offset_bottom = 24.0
text = "PAUSED"

[node name="StartLabel" type="Label" parent="." unique_id=1830531995]
offset_left = 158.0
offset_top = 23.0
offset_right = 207.0
offset_bottom = 46.0
text = "Press Enter to Start"

[node name="Hazards" parent="." unique_id=604436082 instance=ExtResource("4_jyhfs")]
position = Vector2(399, 130)
scale = Vector2(0.87545186, 1.0340157)

[node name="Hazards2" parent="." unique_id=1781041526 instance=ExtResource("4_jyhfs")]
position = Vector2(56, 133)

[node name="HpLabel" type="Label" parent="." unique_id=1977853635]
offset_left = 426.0
offset_top = 13.0
offset_right = 466.0
offset_bottom = 36.0
text = "HP: 3"

[node name="GameOverLabel" type="Label" parent="." unique_id=1744513248]
visible = false
offset_left = 425.0
offset_top = 43.0
offset_right = 587.0
offset_bottom = 66.0
text = "GAME OVER - Press R"

[node name="Goal" parent="." unique_id=357092830 instance=ExtResource("5_tbgi4")]
position = Vector2(588, 44)

[node name="WinLabel" type="Label" parent="." unique_id=267096211]
offset_left = 244.0
offset_top = 80.0
offset_right = 385.0
offset_bottom = 103.0
scale = Vector2(1.0148966, 1)
text = "YOU WIN - Press R"
